# ModemSuite

./: README.md
Docs/: README_en.md  development-experience.md
Docs/user-guide/: manual_en.md  manual_zh.md
ModemSuite/common/: modem_common.c  modem_common.h
ModemSuite/interface/: xymodem.h
ModemSuite/src/: xymodem_receiver.c  xymodem_receiver.h  xymodem_sender.c  xymodem_sender.h
ModemSuite/test/: xymodem_test_config.h
ModemSuite/test/receiver/: CMakeLists.txt  received_file.txt  receiver_test.c  start
ModemSuite/test/sender/: CMakeLists.txt  sender_test.c  start
